Fixed letter spacing

--- a/app/css/partials/_global.scss
+++ b/app/css/partials/_global.scss
@@ -101,7 +101,7 @@ img {
 // Font styles
 .all-caps-mono {
   text-transform: uppercase;
-  // letter-spacing: 5px;
+  letter-spacing: 3px;
 }
 
 .serif-header {
